Add echo bot functionality